--- a/index.html
+++ b/index.html
@@ -2592,7 +2592,7 @@ to use  mathematics to solve real problems elegantly. Reference books (downloada
     <td height="31" bgcolor="#ffffff">
       <p align="center"><span class="MsoNormal STYLE1">Theory without practice 
       is empty, but equally, practice without theory is blind.</span> <span class="MsoNormal STYLE2">---- I. Kant </span></p></td></tr></tbody></table>
-<p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">News:</span></u></b><b style="mso-bidi-font-weight: normal;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"> 
+<p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Highlights:</span></u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"> 
   <o:p></o:p> </span></b></p>
 <table width="786" height="519" border="1">
   <tbody>
@@ -4310,13 +4310,16 @@ Pattern Recognition 2010, Asian Conf. Computer Vision 2009 (<b style="mso-bidi-f
 Membership:     <strong>IEEE Fellow</strong>, <strong>IAPR Fellow</strong>     
 <o:p></o:p></span></p>
 <p><strong><b style="mso-bidi-font-weight: normal;"><u><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Awards:</span></u></b></strong></p>
-<p>1. Excellent Ph.D. Supervisor, awarded by Beijing  Society of Image and 
-Graphics (2018 and 2019). </p>
-<p>2. The National Science Fund for Distinguished Young Scholars (Year 2016)</p>
-<p>3. Okawa Research Grant (2016) </p>
-<p>4. Champion of <a href="http://image-net.org/challenges/LSVRC/2015/results">ImageNet Large Scale 
+<p>1.  First prize of the CCF Natural Science Award (2020), by the work &quot;Theories and Methods of Low-Rank Models for High-Dimensional Complex Data&quot;.</p>
+<p>2. Excellent Ph.D. Supervisor, awarded by Beijing  Society of Image and 
+  Graphics (2018 and 2019). </p>
+<p>3. Innovation Award of MS COCO and Mapillary Challenge Panoptic Segmentation Task (2019).</p>
+<p>4.  Third place of MS COCO and Mapillary Challenge Panoptic Segmentation Task (2019).</p>
+<p>5. The National Science Fund for Distinguished Young Scholars (Year 2016)</p>
+<p>6. Okawa Research Grant (2016) </p>
+<p>7. Champion of <a href="http://image-net.org/challenges/LSVRC/2015/results">ImageNet Large Scale 
 Visual Recognition Challenge (ILSVRC)  Scene Classification Task</a> (2015)</p>
-<p>5. Microsoft SPOT Award (2007)  </p>
+<p>8. Microsoft SPOT Award (2007)  </p>
 <p><strong><b style="mso-bidi-font-weight: normal;"><u><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Courses:</span></u></b></strong></p>
 <p>1. Fundamentals of Data Analysis </p>
 <p>2. Manifold Learning and Sparse Representation</p>
