--- a/index.html
+++ b/index.html
@@ -2609,11 +2609,11 @@ to use  mathematics to solve real problems elegantly. Reference books (downloada
     <td width="164" rowspan="3"><img src="./index_files/Opt_Cover.png" width="167" height="249"></td></tr>
   <tr align="left">
     <td height="82">
-      <p class="WordSection1">2. Two papers accepted to AAAI 2021! </p></td>
+      <p class="WordSection1">2. I was invited to be Program co-Chair of ICPR 2022! I was elected as a Year 2020 Distuiguished Speaker of China Computer Federation (CCF)! </p></td>
     </tr>
   <tr align="left">
     <td height="78">
-      <p class="WordSection1">3. I was invited to be Program co-Chair of ICPR 2022! My work &quot;Theories and Methods of Low-Rank Models for High-Dimensional Complex Data&quot; won the first prize of CCF Natural Science Award. </p></td>
+      <p class="WordSection1">3.  My work &quot;Theories and Methods of Low-Rank Models for High-Dimensional Complex Data&quot; won the first prize of CCF Natural Science Award. </p></td>
     </tr>
   <tr align="left">
     <td height="73">
@@ -2827,6 +2827,7 @@ International   Mathematics Forum</a>, Higher Education Press, never appear.</sp
 </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Journal 
 Papers:   <o:p></o:p></span></u></b></p>
+<p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">133. Jian Lu, Chen Xu, Zhenwei Hu, Xiaoxia Liu, Qingtang Jiang, Deyu Meng, and <u>Zhouchen Lin</u>, <em>Denoising of Magnetic Resonance Images by a New Non-Local Low-Rank Regularization Method</em>, submitted to IEEE Trans. Computational Imaging. </p>
 <p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">132. Xiangtai Li, Xia Li, Ansheng You, Li Zhang, Guangliang Cheng, Kuiyuan Yang, Yunhai Tong, <span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">and <u>Zhouchen Lin</u></span>, <em>Towards Efficient Scene Understanding via Squeeze Reasoning</em>, submitted to IEEE Trans. Image Processing.</p>
 <p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">131. Huan Li, <u>Zhouchen Lin</u>, and Yongchun Fang, <em>Optimal Accelerated Variance Reduced EXTRA and DIGing for Strongly Convex and  Smooth Decentralized Optimization</em>, submitted to J. Machine Learning Research.</p>
 <p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">130. Hanyuan Hang, Tao Huang, Biao Li, and <u>Zhouchen Lin</u>, <em>Histogram Transform Ensembles for Density-based Unsupervised Learning</em>, submitted to J. Machine Learning Research.</p>
@@ -3472,7 +3473,7 @@ Shih, <i>Mathematical Optimal Control Models of Continuous Castin</i>g,
 No. 1, pp. 119-127, 1998.</span><o:p></o:p></span></p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Refereed 
 Conference Papers:<o:p></o:p></span></u></b></p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">114. 10 papers submitted to ICLR 2021.</span></span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">114. Zhengyang Geng, Meng-Hao Guo, Hongxu Chen, Xia Li, Ke Wei, and <u>Zhouchen Lin</u>, <em>Is Attention Better Than Matrix Decomposition? </em>ICLR 2021. [<a href="Publications/2021-ICLR-Attention.pdf">pdf</a>]</span></span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">113. Yangyang Li, Lin Kong, Fanhua Shang, Yuanyuan Liu, Hongying Liu, and <u>Zhouchen Lin</u>, <em>Learned Extragradient ISTA with Interpretable Residual Structures for Sparse Coding</em>, AAAI 2021. [<a href="Publications/2021-AAAI-ELISTA.pdf">pdf</a>][<a href="Publications/2021-AAAI-ELISTA_supp.pdf">supplementary material</a>]</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -4246,11 +4247,12 @@ Recognition,  Institute of Advanced Technology, Chinese Academy of Sciences,
 Shenzhen.</p>
 <p>21. Senior Consultant of Guangdong Lab. of Artificial Intelligence and Digital Economy (Pazhou Lab.).</p>
 <p>22. Technical Advisory Board of AI School, Nanjing University of Aeronautics and Astronautics.</p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">23. Reviewer 
+<p>23. 国家天元数学西北中心2021主题活动年专家委员会委员。中心  2021年活动主题为“最优化方法与人工智能”。</p>
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">24. Reviewer/Editor 
   to Journals:    
     <o:p></o:p>
 </span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Machematical Programming, IEEE Trans.
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Optimization Methods and Software (<strong>Associate Editor</strong>), Machematical Programming, IEEE Trans.
   Pattern Analysis and Machine Intelligence (<strong>Retired Associate Editor</strong>), International Journal of Computer
   Vision (<strong>Associate Editor</strong>), IEEE Trans. Information Theory, IEEE Journal of Selected Topics in 
   Signal Processing (<strong>Guest Editor</strong>), J. Machine Learning Research, 
@@ -4265,8 +4267,8 @@ Shenzhen.</p>
   Photogrammetric Engineering and Remote Sensing, </span><span style="mso-ascii-font-family: Verdana; mso-hansi-font-family: Verdana;">中国科学</span><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">(E</span><span style="mso-ascii-font-family: Verdana; mso-hansi-font-family: Verdana;">辑</span><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">) [Science in China
     (Series E)] 
   <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">24. 
-Reviewers/Chairs to Conferences:   
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">25. 
+Reviewer/Chair to Conferences:   
     <o:p></o:p></span></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">  ICPR 2022  
 (<strong>Program Co-Chair</strong>), ICML 2021 (<strong>Area Chair</strong>), IJCAI 2021 (<strong>Area Chair</strong>, <strong>Video Competition Chair</strong>), ICLR 2021 (<strong>Area Chair</strong>), CVPR 2021 
@@ -4306,20 +4308,21 @@ Pattern Recognition 2010, Asian Conf. Computer Vision 2009 (<b style="mso-bidi-f
  Conf. Multimodal Interfaces 2002, Int’l Conf. Images and Graphics 2002, Int’l
  Conf. Computer Vision 2001, Pacific Graphics 2001 
  <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">25. 
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">26. 
 Membership:     <strong>IEEE Fellow</strong>, <strong>IAPR Fellow</strong>     
 <o:p></o:p></span></p>
 <p><strong><b style="mso-bidi-font-weight: normal;"><u><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Awards:</span></u></b></strong></p>
 <p>1.  First prize of the CCF Natural Science Award (2020), by the work &quot;Theories and Methods of Low-Rank Models for High-Dimensional Complex Data&quot;.</p>
-<p>2. Excellent Ph.D. Supervisor, awarded by Beijing  Society of Image and 
+<p>2. Distuiguished Speaker of CCF (2020). </p>
+<p>3. Excellent Ph.D. Supervisor, awarded by Beijing  Society of Image and 
   Graphics (2018 and 2019). </p>
-<p>3. Innovation Award of MS COCO and Mapillary Challenge Panoptic Segmentation Task (2019).</p>
-<p>4.  Third place of MS COCO and Mapillary Challenge Panoptic Segmentation Task (2019).</p>
-<p>5. The National Science Fund for Distinguished Young Scholars (Year 2016)</p>
-<p>6. Okawa Research Grant (2016) </p>
-<p>7. Champion of <a href="http://image-net.org/challenges/LSVRC/2015/results">ImageNet Large Scale 
+<p>4. Innovation Award of MS COCO and Mapillary Challenge Panoptic Segmentation Task (2019).</p>
+<p>5.  Third place of MS COCO and Mapillary Challenge Panoptic Segmentation Task (2019).</p>
+<p>6. The National Science Fund for Distinguished Young Scholars (Year 2016)</p>
+<p>7. Okawa Research Grant (2016) </p>
+<p>8. Champion of <a href="http://image-net.org/challenges/LSVRC/2015/results">ImageNet Large Scale 
 Visual Recognition Challenge (ILSVRC)  Scene Classification Task</a> (2015)</p>
-<p>8. Microsoft SPOT Award (2007)  </p>
+<p>9. Microsoft SPOT Award (2007)  </p>
 <p><strong><b style="mso-bidi-font-weight: normal;"><u><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Courses:</span></u></b></strong></p>
 <p>1. Fundamentals of Data Analysis </p>
 <p>2. Manifold Learning and Sparse Representation</p>
@@ -4659,7 +4662,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Jan. 9, 2021. Number of visitors since March 1, 2010:     
+was last updated on Jan. 13, 2021. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
