--- a/index.html
+++ b/index.html
@@ -2841,41 +2841,41 @@ Papers:   <o:p></o:p></span></u></b></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">125. Hao Kong, Canyi Lu, and <u>Zhouchen Lin</u>, <em>Tensor Q-Rank: New Data Dependent Tensor Rank</em>, submitted to Machine Learning.</span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">124. Jianlong Wu, Xingyu Xie, Liqiang Nie, <u>Zhouchen Lin</u>, and Hongbin Zha, <em>Reconstruction Regularized Low-Rank Subspace Learning for Cross-Modal Retrieval</em>, submitted to Pattern Recognition.</span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">124. Xiaoqin Zhang, Jingjing Zheng, Di Wang, Guiying Tang, Zhengyuan Zhou, and <u>Zhouchen Lin</u>, <em>Structural Sparsity Optimization with Non-Convex Surrogates: A Unified Algorithmic Framework</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence.</span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">123. Xiaoqin Zhang, Jingjing Zheng, Di Wang, Guiying Tang, Zhengyuan Zhou, and <u>Zhouchen Lin</u>, <em>Structural Sparsity Optimization with Non-Convex Surrogates: A Unified Algorithmic Framework</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence.</span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">123. Zhengyang Shen, Yibo Yang, <u>Zhouchen Lin</u>, and Jinwen Ma, <em>Newton Design: Designing CNNs with the Family of Newton’s Methods</em>, submitted to IEEE Trans. Neural Networks and Learning Systems, major revision. </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">122. Zhengyang Shen, Yibo Yang, <u>Zhouchen Lin</u>, and Jinwen Ma, <em>Newton Design: Designing CNNs with the Family of Newton’s Methods</em>, submitted to IEEE Trans. Neural Networks and Learning Systems, major revision. </span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">122. Risheng Liu,  Zhu Liu, Pan Mu, <u>Zhouchen Lin</u>, Xin Fan, Zhongxuan Luo, <em>Investigating Image Propagations from Optimization Perspective: Modules, Control Mechanisms and Applications</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence, major revision. </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">121. Risheng Liu,  Zhu Liu, Pan Mu, <u>Zhouchen Lin</u>, Xin Fan, Zhongxuan Luo, <em>Investigating Image Propagations from Optimization Perspective: Modules, Control Mechanisms and Applications</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence, major revision. </span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">121. Hanyuan Hang, <u>Zhouchen Lin</u>, Xiaoyu Liu, and Hongwei Wen, <em>Histogram Transform Ensembles for Large-scale Regression</em>, submitted to J. Machine Learning Research. </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">120. Hanyuan Hang, <u>Zhouchen Lin</u>, Xiaoyu Liu, and Hongwei Wen, <em>Histogram Transform Ensembles for Large-scale Regression</em>, submitted to J. Machine Learning Research. </span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">120. Hanyuan Hang, Yuchao Cai, Hanfang Yang, and <u>Zhouchen Lin</u>, <em>Density-based Forest Clustering</em>, submitted to IEEE Trans. Knowledge and Data Engineering.</span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">119. Hanyuan Hang, Yuchao Cai, Hanfang Yang, and <u>Zhouchen Lin</u>, <em>Density-based Forest Clustering</em>, submitted to IEEE Trans. Knowledge and Data Engineering.</span></p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">118. Ke Sun, 
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">119. Ke Sun, 
 Zhanxing Zhu, and <u>Zhouchen Lin</u>, <em>Multi-Stage Self-Supervised Learning 
 for Graph Convolutional Networks</em>, submitted to Machine Learning. 
 </span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">117. Qigong Sun, Xiufang Li, Fanhua Shang, 
+<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">118. Qigong Sun, Xiufang Li, Fanhua Shang, 
 Hongying Liu, Kang Yang, Licheng Jiao, and <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><u>Zhouchen 
 Lin</u></span>, <em>Model  Decomposition and Acceleration for Quantized Neural 
 Network</em>, <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">submitted to 
 IEEE Trans. Pattern Analysis and Machine Intelligence, major revision</span>. </span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">116. Huan Li, Cong Fang, WotaoYin, and 
+<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">117. Huan Li, Cong Fang, WotaoYin, and 
     <u>Zhouchen Lin</u>, <em>Near Optimal Complexities of Distributed Accelerated 
 Gradient Method</em>, submitted to IEEE Trans. Automatic Control.</span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">115. Jianlong Wu, <u>Zhouchen Lin</u>, and 
+<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">116. Jianlong Wu, <u>Zhouchen Lin</u>, and 
 Hongbin Zha, <em>Reconstruction Regularized Cross-Modal Subspace Learning</em>, 
 submitted to IEEE Trans. Multimedia. </span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">114. Huan Li, Cong 
+<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">115. Huan Li, Cong 
 Fang, and <u>Zhouchen Lin</u>, <em>Convergence Rates Analysis of the Quadratic 
 Penalty Method and Its Applications to Decentralized Distributed 
 Optimization</em>, submitted to SIAM J. Optimization. </span></p>
+<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
+<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">114. Jianlong Wu*, Xingyu Xie, Liqiang Nie*, <u>Zhouchen Lin</u>, and Hongbin Zha, <em>Reconstruction Regularized Low-Rank Subspace Learning for Cross-Modal Retrieval</em>, Pattern Recognition, accepted.</span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">113. Jia Li, Mingqing Xiao, Cong Fang, Yue Dai, 
 Chao Xu, and <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><u>Zhouchen 
@@ -3184,8 +3184,8 @@ Trans. Image Processing, Vol. 24. No. 12, pp. 4918-4933, 2015.<span class="MsoNo
 <p class="MsoNormal191" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal191" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">52. 
 Liansheng Zhuang*, Jingjing Wang, Shenghua Gao, <u>Zhouchen Lin</u>, Yi Ma, 
-Tianzhu Zhuang, and Nenghai Yu, <em>Constructing a Nonnegative Low-Rank and 
-Sparse Graph With Data-Adap2</em></span></p>
+Tianzhu Zhuang, and Nenghai Yu, <em>Constructing a Nonnegative Low-Rank and Sparse Graph With Data-Adaptive Features, </em>IEEE Trans. Image Process. 24(11): 3717-3728, 2015. [<a href="Publications/2015-TIP-NNLRS-Graph.pdf">pdf</a>] </span></p>
+<p class="MsoNormal191" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal14" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">51. Hongyang Zhang*, <u>Zhouchen 
 Lin</u>, Chao Zhang, and Junbin Gao, <em>Relations among Some Low Rank Subspace 
 Recovery Models</em>, Neural Computation, Vol. 27, No. 9, pp. 1915-1950, 2015. 
@@ -3558,7 +3558,7 @@ Structure Design</em>, ACML 2018, short oral. [<a href="https://zhouchenlin.gith
 <p class="MsoNormal26413122" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"></span><span class="MsoNormal26413" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">87. Cong Fang, Junchi Li, 
 <u>Zhouchen Lin</u>, and Tong Zhang, <em>SPIDER: Near-Optimal Non-Convex 
 Optimization via Stochastic Path-Integrated Differential Estimator</em>, NIPS 
-2018, spotlight. [<a href="https://arxiv.org/abs/1807.01695">pdf</a>] 
+2018, spotlight. [<a href="Publications/2018-NIPS-SPIDER.pdf">pdf</a>][<a href="Publications/2018-NeurIPS-SPIDER-full.pdf">full version</a>] 
 </span></span></p>
 <p class="MsoNormal26413" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">86. Zhisheng Zhong, Yibo Yang, 
@@ -4210,7 +4210,7 @@ Editor of Neurocomputing.
     <o:p></o:p> </span></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">8. Chairman 
 of Machine Vision Professional Committee, China Society of Images and 
-Graphics.</span></p>
+Graphics (evaluated &quot;excellent&quot; in 2018 and 2019).</span></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">9. 
 Vice-Chairman of Pattern Recognition and Machine Intelligence Professional 
 Committee, China Association of Automation.</span></p>
@@ -4659,7 +4659,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Jan. 13, 2021. Number of visitors since March 1, 2010:     
+was last updated on Jan. 16, 2021. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
