--- a/index.html
+++ b/index.html
@@ -2875,7 +2875,7 @@ Fang, and <u>Zhouchen Lin</u>, <em>Convergence Rates Analysis of the Quadratic
 Penalty Method and Its Applications to Decentralized Distributed 
 Optimization</em>, submitted to SIAM J. Optimization. </span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">114. Jianlong Wu*, Xingyu Xie, Liqiang Nie*, <u>Zhouchen Lin</u>, and Hongbin Zha, <em>Reconstruction Regularized Low-Rank Subspace Learning for Cross-Modal Retrieval</em>, Pattern Recognition, accepted.</span></p>
+<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">114. Jianlong Wu*, Xingyu Xie, Liqiang Nie*, <u>Zhouchen Lin</u>, and Hongbin Zha, <em>Reconstruction Regularized Low-Rank Subspace Learning for Cross-Modal Retrieval</em>, Pattern Recognition, accepted. [<a href="Publications/2021-PR-Cross-Modal.pdf">pdf</a>]</span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">113. Jia Li, Mingqing Xiao, Cong Fang, Yue Dai, 
 Chao Xu, and <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><u>Zhouchen 
@@ -3529,7 +3529,7 @@ ICCV 2019, oral. [<a href="https://zhouchenlin.github.io/Publications/2019-ICCV-
 <p class="MsoNormal264131" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal264131" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal264131" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">94. <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">Tiancheng 
 Shen, Xia Li, Jianlong Wu, Zhisheng Zhong, and <u>Zhouchen Lin</u>*, <em>R^2-Net: Recurrent and Recursive Network for Sparse-view CT Artifacts Removal</em>, 
-MICCAI 2019</span>. [<a href="https://zhouchenlin.github.io/Publications/2019-MICCAI-R2-Net.pdf">pdf</a>]</span></span></p>
+MICCAI 2019</span>. [<a href="https://zhouchenlin.github.io/Publications/2019-MICCAI-R2-Net.pdf">pdf</a>][<a href="R2-Net-code.zip">code</a>]</span></span></p>
 <p class="MsoNormal264131" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal2641314" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal264131" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">93. Cong Fang, <u>Zhouchen Lin</u>, and Tong Zhang, <em>Sharp Analysis 
 for Nonconvex SGD Escaping from Saddle Points</em>, COLT 2019. [<a href="https://arxiv.org/abs/1902.00247v1">pdf</a>]</span></span></p>
@@ -4659,7 +4659,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Jan. 16, 2021. Number of visitors since March 1, 2010:     
+was last updated on Jan. 23, 2021. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
