--- a/index.html
+++ b/index.html
@@ -2827,7 +2827,9 @@ International   Mathematics Forum</a>, Higher Education Press, never appear.</sp
 </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Journal 
 Papers:   <o:p></o:p></span></u></b></p>
-<p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">133. Jian Lu, Chen Xu, Zhenwei Hu, Xiaoxia Liu, Qingtang Jiang, Deyu Meng, and <u>Zhouchen Lin</u>, <em>Denoising of Magnetic Resonance Images by a New Non-Local Low-Rank Regularization Method</em>, submitted to IEEE Trans. Computational Imaging. </p>
+<p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">135. Hanyuan Hang, <u>Zhouchen Lin</u>, Xiaoyu Liu, and Hongwei Wen, <em>Histogram Transform Ensembles for Large-scale Regression</em>, submitted to J. Machine Learning Research.</span></p>
+<p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">134. Risheng Liu,  Jiaxin Gao, Jin Zhang, Deyu Meng, and <span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><u>Zhouchen Lin</u></span>, <em>Investigating Bi-Level Optimization for Learning and Vision from a Unified Perspective: A Survey and Beyond</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence.</p>
+<p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">133. Jian Lu, Chen Xu, Zhenwei Hu, Xiaoxia Liu, Qingtang Jiang, Deyu Meng, and <u>Zhouchen Lin</u>, <em>Denoising of Magnetic Resonance Images by a New Non-Local Low-Rank Regularization Method</em>, submitted to IEEE Trans. <span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">Image Processing</span>. </p>
 <p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">132. Xiangtai Li, Xia Li, Ansheng You, Li Zhang, Guangliang Cheng, Kuiyuan Yang, Yunhai Tong, <span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">and <u>Zhouchen Lin</u></span>, <em>Towards Efficient Scene Understanding via Squeeze Reasoning</em>, submitted to IEEE Trans. Image Processing.</p>
 <p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">131. Huan Li, <u>Zhouchen Lin</u>, and Yongchun Fang, <em>Optimal Accelerated Variance Reduced EXTRA and DIGing for Strongly Convex and  Smooth Decentralized Optimization</em>, submitted to J. Machine Learning Research.</p>
 <p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">130. Hanyuan Hang, Tao Huang, Biao Li, and <u>Zhouchen Lin</u>, <em>Histogram Transform Ensembles for Density-based Unsupervised Learning</em>, submitted to J. Machine Learning Research.</p>
@@ -3473,6 +3475,14 @@ Shih, <i>Mathematical Optimal Control Models of Continuous Castin</i>g,
 No. 1, pp. 119-127, 1998.</span><o:p></o:p></span></p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Refereed 
 Conference Papers:<o:p></o:p></span></u></b></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">19. 12 paper submitted to ICML 2021.</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">18. One paper submitted to SIGIR 2021.</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">17. One paper submitted to IJCAI 2021.</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">116. Three papers submitted to CVPR 2021.</span></span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">115. Ke Sun, <u>Zhouchen Lin</u>, and Zhanxing Zhu, <em>AdaGCN: Adaboosting Graph Convolutional Networks into Deep Models</em>, ICLR 2021. [<a href="Publications/2021-ICLR-Ada-GCN.pdf">pdf</a>] </span></span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">114. Zhengyang Geng, Meng-Hao Guo, Hongxu Chen, Xia Li, Ke Wei, and <u>Zhouchen Lin</u>, <em>Is Attention Better Than Matrix Decomposition? </em>ICLR 2021. [<a href="Publications/2021-ICLR-Attention.pdf">pdf</a>]</span></span></span></p>
@@ -4163,7 +4173,8 @@ Analysis<o:p></o:p></span></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">50.
  *(MS#333145.01) Rectification of Characters and Text as Transform Invariant
  Low-Rank Textures     <o:p></o:p></span></p>
-<p>51. * Light transport reconstruction from sparsely captured images </p>
+<p>51. * Light transport reconstruction from sparsely captured images</p>
+<p>52. Neural Network Update Method,  Classification Method and Electronic Device [Samsung] </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Chinese 
 Patents:</span></u></b> <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">(Those marked by ‘*’   have been 
 granted)</span></p>
@@ -4189,7 +4200,8 @@ granted)</span></p>
 <p>19. （202010876709.3） 基于稀疏编码的深度学习网络结构搜索的图像识别方法</p>
 <p>20. （202010960192.6）基于可学习可微分矩阵逆及矩阵分解的图像恢复方法</p>
 <p>21. （202011012138.5）基于偏微分算子的广义等变卷积网络模型的图像分类方法 </p>
-<p>22. （PCT/CN2020/132017）基于偏微分算子的广义等变卷积网络模型的图像分类方法[国际专利]</p>
+<p>22. （PCT/CN2020/084650）一种基于偏微分算子的等变卷积网络模型的图像分类方法[国际专利]</p>
+<p>23. （PCT/CN2020/132017）基于偏微分算子的广义等变卷积网络模型的图像分类方法[国际专利]</p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Academic 
 Activities:   
         <o:p></o:p>
@@ -4659,7 +4671,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Jan. 23, 2021. Number of visitors since March 1, 2010:     
+was last updated on Feb. 5, 2021. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
