--- a/index.html
+++ b/index.html
@@ -2827,7 +2827,7 @@ International   Mathematics Forum</a>, Higher Education Press, never appear.</sp
 </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Journal 
 Papers:   <o:p></o:p></span></u></b></p>
-<p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">135. Hanyuan Hang, <u>Zhouchen Lin</u>, Xiaoyu Liu, and Hongwei Wen, <em>Histogram Transform Ensembles for Large-scale Regression</em>, submitted to J. Machine Learning Research.</span></p>
+<p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">135. Hanyuan Hang, Yuchao Cai. Hanfang Yang, Biao Li, and <u>Zhouchen Lin</u>, <em>Optimal Class-Imbalanced Learning with Bagged Nearest Neighbor Classifiers</em>, submitted to J. Machine Learning Research.</span></span></p>
 <p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">134. Risheng Liu,  Jiaxin Gao, Jin Zhang, Deyu Meng, and <span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><u>Zhouchen Lin</u></span>, <em>Investigating Bi-Level Optimization for Learning and Vision from a Unified Perspective: A Survey and Beyond</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence.</p>
 <p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">133. Jian Lu, Chen Xu, Zhenwei Hu, Xiaoxia Liu, Qingtang Jiang, Deyu Meng, and <u>Zhouchen Lin</u>, <em>Denoising of Magnetic Resonance Images by a New Non-Local Low-Rank Regularization Method</em>, submitted to IEEE Trans. <span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">Image Processing</span>. </p>
 <p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">132. Xiangtai Li, Xia Li, Ansheng You, Li Zhang, Guangliang Cheng, Kuiyuan Yang, Yunhai Tong, <span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">and <u>Zhouchen Lin</u></span>, <em>Towards Efficient Scene Understanding via Squeeze Reasoning</em>, submitted to IEEE Trans. Image Processing.</p>
@@ -4671,7 +4671,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Feb. 5, 2021. Number of visitors since March 1, 2010:     
+was last updated on Feb. 8, 2021. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
