--- a/index.html
+++ b/index.html
@@ -2617,7 +2617,7 @@ to use  mathematics to solve real problems elegantly. Reference books (downloada
     </tr>
   <tr align="left">
     <td height="73">
-      <p class="WordSection1">4. My new book, <a href="https://www.springer.com/gp/book/9789811529092">Accelerated Optimization for Machine Learning: First-Order Algorithms</a>, has been published by Springer! Michael Jordan wrote one of the forewords!</p></td>
+      <p class="WordSection1">4. My new book, <a href="https://www.springer.com/gp/book/9789811529092">Accelerated Optimization for Machine Learning: First-Order Algorithms</a>, has been published by Springer! Michael Jordan wrote one of the forewords! (<a href="Errata_of_Accelerated_Optimization.pdf"><strong>Errata</strong></a>) </p></td>
     <td width="164" rowspan="3"><img width="168" height="215" alt="Cover" src="./index_files/Cover_Design1.png"></td>
   </tr>
   <tr align="left">
