--- a/index.html
+++ b/index.html
@@ -2613,7 +2613,7 @@ to use  mathematics to solve real problems elegantly. Reference books (downloada
     </tr>
   <tr align="left">
     <td height="78">
-      <p class="WordSection1">3.  I was elected as a Year 2020 Distuiguished Speaker of China Computer Federation (CCF)! My work &quot;Theories and Methods of Low-Rank Models for High-Dimensional Complex Data&quot; won the first prize of CCF Natural Science Award. </p></td>
+      <p class="WordSection1">3.  I was elected as a Year 2020 Distinguished Speaker of China Computer Federation (CCF)! My work &quot;Theories and Methods of Low-Rank Models for High-Dimensional Complex Data&quot; won the first prize of CCF Natural Science Award. </p></td>
     </tr>
   <tr align="left">
     <td height="73">
@@ -2905,7 +2905,7 @@ Machines</em>, <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&qu
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">107. Huan Li and <u>Zhouchen Lin</u>, <em>Revisiting EXTRA for Smooth Distributed Optimization</em>, SIAM 
   J. Optimization, 30(3): 1795-1821 (2020). [<a href="Publications/2020-SIAM-EXTRA.pdf">pdf</a>] </span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">106. <u>Zhouchen Lin</u>, <em>How Can Machine Learning and Optimization Help Each Other Better? </em>Journal of the Operations Research Society of China, 8(2):341–351(2020). [<a href="Publications/2019-ML&Opt.pdf">pdf</a>]</span></p>
+<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">106. <u>Zhou-Chen Lin</u>, <em>How Can Machine Learning and Optimization Help Each Other Better? </em>Journal of the Operations Research Society of China, 8(2):341–351(2020). [<a href="Publications/2019-ML&Opt.pdf">pdf</a>]</span></p>
 <p class="MsoNormal12311" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal12311" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">105. Risheng Liu, Shichao Cheng, Yi He, Xin Fan, <u>Zhouchen Lin</u>, and Zhongxuan Luo, <em>On the Convergence of Learning-Based Iterative Methods for Nonconvex Inverse Problems, </em>IEEE Trans. Pattern Analysis and Machine Intelligence, 42(12): 3027-3039 (2020).</span><span class="STYLE12"> [<a href="https://zhouchenlin.github.io/Publications/2019-TPAMI-FIMA.pdf">pdf</a>] 
 </span></p>
@@ -3286,9 +3286,10 @@ Risheng  Liu, <u>Zhouchen Lin</u>*, Wei Zhang, Kewei Tang, and Zhixun Su,
 <em>Toward Designing Intelligent PDEs for Computer  Vision: An  Optimal Control 
 Approach</em>, Image and Vision  Computing, Vol. 31, No. 1,  pp. 43–56, 
 2013.<span class="STYLE2">
-<o:p></o:p> </span></span><span class="STYLE2">[<a href="https://zhouchenlin.github.io/Publications/2013-IVC-LPDE.pdf">pdf</a>][<a href="https://zhouchenlin.github.io/LPDE.zip">code</a> (needs some JDK, run on 
+<o:p></o:p> 
+</span></span><span class="STYLE2">[<a href="https://zhouchenlin.github.io/Publications/2013-IVC-LPDE.pdf">pdf</a>][<a href="https://zhouchenlin.github.io/LPDE.zip">code</a> (needs some JDK, run on 
 visual C++ 6.0, which may not be supported by Windows now. Please also try the 
-matlab codes for papers #55 &amp; #62.)]</span></p>
+Matlab codes for papers #55 &amp; #62.)]</span></p>
 <p class="MsoNormal" style="-ms-text-autospace:; mso-layout-grid-align: none;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><o:p>&nbsp;</o:p></span></p>
 <p style="margin: 0cm 0cm 0pt; -ms-layout-grid-mode: char;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">35. Dongwei  Ren, Wangmeng Zuo*, 
 Xiaofei Zhao, <u>Zhouchen Lin</u>, David Zhang, <em>Fast  Gradient Vector Flow 
@@ -4262,7 +4263,7 @@ Shenzhen.</p>
   to Journals:    
     <o:p></o:p>
 </span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Optimization Methods and Software (<strong>Associate Editor</strong>), Machematical Programming, IEEE Trans.
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Optimization Methods and Software (<strong>Associate Editor</strong>), Mathematical Programming, IEEE Trans.
   Pattern Analysis and Machine Intelligence (<strong>Retired Associate Editor</strong>), International Journal of Computer
   Vision (<strong>Associate Editor</strong>), IEEE Trans. Information Theory, IEEE Journal of Selected Topics in 
   Signal Processing (<strong>Guest Editor</strong>), J. Machine Learning Research, 
@@ -4323,7 +4324,7 @@ Membership:     <strong>IEEE Fellow</strong>, <strong>IAPR Fellow</strong>
 <o:p></o:p></span></p>
 <p><strong><b style="mso-bidi-font-weight: normal;"><u><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Awards:</span></u></b></strong></p>
 <p>1.  First prize of the CCF Natural Science Award (2020), by the work &quot;Theories and Methods of Low-Rank Models for High-Dimensional Complex Data&quot;.</p>
-<p>2. Distuiguished Speaker of CCF (2020). </p>
+<p>2. Distinguished Speaker of CCF (2020). </p>
 <p>3. Excellent Ph.D. Supervisor, awarded by Beijing  Society of Image and 
   Graphics (2018 and 2019). </p>
 <p>4. Innovation Award of MS COCO and Mapillary Challenge Panoptic Segmentation Task (2019).</p>
