--- a/index.html
+++ b/index.html
@@ -2648,10 +2648,7 @@ Vitae:</span></u></b><b style="mso-bidi-font-weight: normal;"><span lang="EN-US"
       University<o:p></o:p></span></p></td>
     <td width="236" valign="top" style="padding: 0.75pt; width: 177.3pt; height: 18pt;">
       <p class="MsoNormal"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;;">Machine Learning, 
-      Optimization,</span><span lang="EN-US" style="font-family: &quot;Times New Roman&quot;,&quot;serif&quot;; font-size: 10pt;">
-<o:p></o:p>
-      </span>Image 
-      Processing, Pattern  Recognition</span></p></td></tr>
+      Optimization</span></span></p></td></tr>
   <tr style="height: 18pt; mso-yfti-irow: 1;">
     <td width="88" style="padding: 0.75pt; width: 65.65pt; height: 18pt;">
       <p class="MsoNormal"><i><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;;">Mar. 
