--- a/index.html
+++ b/index.html
@@ -4457,7 +4457,7 @@ to Write Good Papers [<a href="https://zhouchenlin.github.io/How%20to%20write%20
 </span> (<a href="https://zhouchenlin.github.io/Check List before Handing in Your Paper.pdf">Check 
 List before Handing in Your Paper</a>) (recommended English editing tool: <a href="http://www.pigai.org/">http://www.pigai.org/</a>) (<a href="https://zhouchenlin.github.io/How%20to%20Write%20Good%20Responses%20to%20Reviews%20of%20Journal%20Papers.htm">How 
 to Write Good Responses to Reviews of Journal Papers</a>) (<a href="https://zhouchenlin.github.io/How to Have a Successful Graduate Life-v2.pdf">How 
-to have a successful graduate life?</a>) (<a href="https://zhouchenlin.github.io/Check List before Handing in Your Thesis.pdf">Check List before Handing in Your Chinese Thesis</a>)</p>
+to have a successful graduate life?</a>) (<a href="https://zhouchenlin.github.io/Check List before Handing in Your Thesis.pdf">Check List before Handing in Your Chinese Thesis</a>)(<a href="Key Elements for a Good Presentation.pdf">Key Elements of Good Presentation</a>)</p>
 <p><span lang="EN-US" style="color: rgb(166, 166, 166); font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;; mso-themecolor: background1; mso-themeshade: 166;">At: 
 Institute of Computing Technologies (Chinese Academy of Sciences) (Apr. 24, 
 2008), Southeast University (May 26, 2008), Nanjing University of Aeronautics 
