--- a/index.html
+++ b/index.html
@@ -4208,6 +4208,8 @@ granted)</span></p>
 <p>22. (PCT/CN2020/084650) 一种基于偏微分算子的等变卷积网络模型的图像分类方法[国际专利]</p>
 <p>23. (PCT/CN2020/132017) 基于偏微分算子的广义等变卷积网络模型的图像分类方法[国际专利]</p>
 <p>24. (202110288109X)  基于偏微分算子的等变3D卷积网络的3D形状图像分类方法</p>
+<p>25. (202110568102.3)基于旋转不变的规范等变网络模型的物体形状分类方法 </p>
+<p>26. (202110610837.8) 基于多元激活函数的稀疏正则化神经网络的图像分类方法</p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Academic 
 Activities:   
         <o:p></o:p>
@@ -4678,7 +4680,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on June 11, 2021. Number of visitors since March 1, 2010:     
+was last updated on June 13, 2021. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
