--- a/index.html
+++ b/index.html
@@ -2562,8 +2562,10 @@ strong mathematical abilities</u></b> (however, this does not imply that you
 have to come from mathematics department) and <u><strong>great interest in 
 theoretical analysis</strong></u> in order to enjoy with me how 
 to use  mathematics to solve real problems elegantly. Reference books (downloadable from http://gen.lib.rus.ec/): </span></p>
-<p>1.	Foundations of Machine Learning, 2nd Edition.  You may skip chapters 14 &amp; 16.<br>
-  2.	First-order Methods in Optimization.</p>
+<p>1. Amir Beck, First-order Methods in Optimization.<br>
+  2. Hoang Tuy, Convex Analysis and Global Optimization, 2nd Edition.<br>
+  3. Mehryar Mohri, Afshin Rostamizadeh, and Ameet Talwalkar, Foundations of Machine Learning, 2nd Edition. You may skip chapters 14 &amp; 16.<br>
+</p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"> I am also recruiting 
   Masters who have <b style="mso-bidi-font-weight: normal;"><u> strong coding 
     skills</u></b> and interests in Quantitative Trading (<a href="https://zhouchenlin.github.io/%E9%87%8F%E5%8C%96%E6%8A%95%E8%B5%84%E2%80%94%E2%80%94%E7%AD%96%E7%95%A5%E4%B8%8E%E6%8A%80%E6%9C%AF.pdf">a 
@@ -4680,7 +4682,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on June 19, 2021. Number of visitors since March 1, 2010:     
+was last updated on July 3, 2021. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
